cmake_minimum_required(VERSION 3.17)
project(CSecond)

set(CMAKE_CXX_STANDARD 14)


add_executable(2021.04.15 2021.04.15.cpp)
add_executable(2021.04.16 2021.04.16.cpp)
add_executable(2021.04.17 2021.04.17.cpp)
add_executable(2021.04.18 2021.04.18.cpp)
add_executable(2021.04.19 2021.04.19.cpp)
add_executable(2021.04.20 2021.04.20.cpp)
add_executable(2021.04.21 2021.04.21.cpp)
add_executable(2021.04.22 2021.04.22.cpp)
add_executable(2021.04.23 2021.04.23.cpp)
add_executable(2021.04.24 2021.04.24.cpp)
add_executable(2021.04.25 2021.04.25.cpp)
add_executable(2021.04.25A 2021.04.25A.cpp)
add_executable(2021.04.25B 2021.04.25B.cpp)
add_executable(2021.04.26 2021.04.26.cpp)
add_executable(2021.04.26A 2021.04.26A.cpp)
add_executable(2021.04.26B 2021.04.26B.cpp)
add_executable(2021.04.27 2021.04.27.cpp)
add_executable(2021.04.28 2021.04.28A.cpp)
add_executable(2021.04.28B 2021.04.28B.cpp)