cmake_minimum_required(VERSION 3.17)
project(CSecond)

set(CMAKE_CXX_STANDARD 14)


add_executable(2021.04.15 2021.04.15.cpp)
add_executable(2021.04.16 2021.04.16.cpp)
add_executable(2021.04.17 2021.04.17.cpp)
add_executable(2021.04.18 2021.04.18.cpp)
add_executable(2021.04.19 2021.04.19.cpp)
add_executable(2021.04.20 2021.04.20.cpp)
add_executable(2021.04.21 2021.04.21.cpp)
add_executable(2021.04.22 2021.04.22.cpp)
add_executable(2021.04.23 2021.04.23.cpp)
add_executable(2021.04.24 2021.04.24.cpp)
add_executable(2021.04.25 2021.04.25.cpp)
add_executable(2021.04.25A 2021.04.25A.cpp)
add_executable(2021.04.25B 2021.04.25B.cpp)
add_executable(2021.04.26 2021.04.26.cpp)
add_executable(2021.04.26A 2021.04.26A.cpp)
add_executable(2021.04.26B 2021.04.26B.cpp)
add_executable(2021.04.27 2021.04.27.cpp)
add_executable(2021.04.28 2021.04.28A.cpp)
add_executable(2021.04.28B 2021.04.28B.cpp)
add_executable(2021.04.29 2021.04.29A.cpp)
add_executable(2021.04.29B 2021.04.29B.cpp)
add_executable(2021.04.30A 2021.04.30A.cpp)
add_executable(2021.04.30B 2021.04.30B.cpp)
add_executable(2021.05.01 2021.05.01A.cpp)
add_executable(2021.05.01B 2021.05.01B.cpp)
add_executable(2021.05.02 2021.05.02.cpp)
add_executable(2021.05.03 2021.05.03A.cpp)
add_executable(2021.05.03B 2021.05.03B.cpp)
add_executable(2021.05.04 2021.05.04A.cpp)
add_executable(2021.05.05 2021.05.05.cpp)
add_executable(2021.05.06 2021.05.06.cpp)
add_executable(2021.05.07 2021.05.07.cpp)
add_executable(2021.05.08 2021.05.08.cpp)
add_executable(2021.05.09 2021.05.09.cpp)
add_executable(2021.05.10A 2021.05.10A.cpp)
add_executable(2021.05.10B 2021.05.10B.cpp)
add_executable(2021.05.11 2021.05.11.cpp)